# snippetshub.com

./: .gitignore  Dockerfile  HELPER.md  LICENSE  README.md  TODO.md  docker-compose.yml  init.sql  pyproject.toml  sample.json
config/: admin_views.py  end_user_views.py  sitemaps.py  urls.py
config/settings/: common.py  development.py  production.py  staging.py  third_party_configs.py
nginx/: nginx.conf
static/: staticfiles.json
static/modules/youtube_downloader/: donwloader.e3b5ad782bca.css  downloader.4dc387cb0d17.js
static/scripts/: custom.a66479c09c93.js  custom.bae7c0d3bd53.js  custom.bf9ab81bd8f2.js  custom.cc79cd9d9b1f.js  custom.d0d1f4746b45.js  custom.db5f4fdd55d9.js  custom.js
static/styles/: custom.2f9a03fd017e.css  custom.8421ed6da41b.css  custom.99b310be4ccf.css  custom.aa81a166bfdd.css  custom.d6879a4189ce.css  custom.d6f1b2957cb7.css  custom.fcd0d29da166.css  temp.css
static/vendors/BootstrapIcons/: bootstrap-icons.8bdaa2547356.css
static/vendors/alpinejs/: alpine.min.js
static/vendors/glyphicons/: bootstrap-glyphicons.019f2adfce11.css  bootstrap-glyphicons.2a5f22c98a5d.css
staticfiles/styles/: custom.css
staticfiles/vendors/glyphicons/: bootstrap-glyphicons.css
templates/: index.html
templates/admin_panel/: base.html
templates/custom_crispy_template_packs/: inputs.html
templates/user_panel/: base.html  index.html
users/: models.py
utils/: admin.py  decorators.py  file_categorizer.py  models.py  snippets.py  urls.py  views.py
utils/templatetags/: custom_tags.py
youtube/: forms.py  urls.py  views.py
(+73 files in other folders)
