[tool.poetry]
name = "snippetshub.com"
version = "0.1.0"
description = "A sophisticated web application containing a number of useful snippets."
authors = ["NumanIbnMazid <numanibnmazid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
python-dotenv = "^0.19.1"
dj-database-url = "^0.5.0"
whitenoise = "^5.3.0"
psycopg2-binary = "^2.9.1"
Pillow = "^8.4.0"
autopep8 = "^1.6.0"
django-safedelete = "^1.1.0"
redis = "^3.5.3"
python-memcached = "^1.59"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
django-debug-toolbar = "^3.2.2"
youtube_dl = "^2021.6.6"
django-crispy-forms = "^1.13.0"
django-widget-tweaks = "^1.4.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
